# fallacy-hunter

./: .gitignore  Algorithm  Fallacy.hs  FallacyTest.hs  NOTES  Procfile  README.md  TODO  TextToFOL.hs  USECASES  fallacy-hunter.cabal  newTest.hs  packages
Fallacy/: Detector.hs  LogicalShortcuts.hs  Server.hs  Tests.hs  TextToLogical.hs
report/: report.tex
src/Fallacy/: DetectInFOL.hs  DetectInFOLTest.hs  Detector.hs  LogicShortcuts.hs  LogicalShortcuts.hs  Main.hs  Operator_based_IE.hs  Server.hs  TextToFOL.hs  TextToLogical.hs
