name:                fallacy-hunter
version:             0.0.1
synopsis:            Logical fallacy hunter
homepage:            https://github.com/amsa/fallacy-hunter
license:             MIT
author:              Amin Saeidi
maintainer:          amin.w3dev@gmail.com
category:            Logic
build-type:          Simple
cabal-version:       >=1.8

executable fallacy-hunter
  main-is:             Server.hs
  hs-source-dirs:      Fallacy
  ghc-options:         -threaded -O2
  -- other-modules:       
  build-depends:       base                         >= 4           && < 5
                     , happstack-server             >= 7.4.0       && < 7.4.1
                     , chatter                      >= 0.5.0.0     && < 0.5.0.1
                     , hatt                         >= 1.5.0.3     && < 1.5.0.4
                     , split                        >= 0.2.2       && < 0.2.3
                     , stemmer                      >= 0.5         && < 0.6
                     , mtl                          >= 2.1.3.1     && < 2.1.3.2
                     , text                         >= 1.1.0.0     && < 1.1.0.1
                     , blaze-markup                 >= 0.6.2.0     && < 0.6.2.1
                     , blaze-html                   >= 0.7.0.3       && < 0.7.0.4
                     , containers                   >= 0.5.5.1       && < 0.5.5.2

